Fixed spacing for gujarati.html and added a title

--- a/styles.css
+++ b/styles.css
@@ -545,7 +545,7 @@ a:visited {
     width: 93.75%;
     margin-left: auto;
     margin-right: auto;
-    height: 1400px;
+    height: 1600px;
 }
 
 .container4 > div {
@@ -569,7 +569,7 @@ a:visited {
     font-weight: bold;
 }
 
-.text {
+.texts {
     margin: 0px 0px 60px 40px;
     background-color: #1B263B;
     width: 91.7%;
@@ -580,6 +580,22 @@ a:visited {
 }
 /* --------------------------------------------------------------------------- CSS for class: container4, end --------------------------------------------------------------------------- */
 
+
+
+/* --------------------------------------------------------------------------- CSS for class: title, start --------------------------------------------------------------------------- */
+/* Used in combination with container4 as a title above the container */
+.title {
+    width: 15%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    background-color: #415A77;
+    color: white;
+    border-radius: 10px;
+    text-align: center;
+    font-weight: bold;
+}
+/* --------------------------------------------------------------------------- CSS for class: title, end --------------------------------------------------------------------------- */
 
 /* This style is a modyfied version of the one from this site: 
 https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_scroll_to_top */
